--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@stripe/stripe-js": "^6.1.0",
     "axios": "^1.8.2",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.1",
