--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "mongoose": "^8.12.1",
     "next": "15.2.1",
     "next-auth": "^4.24.11",
+    "nodemailer": "^6.10.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-fontawesome": "^1.7.1",
@@ -44,6 +45,7 @@
     "@tailwindcss/postcss": "^4",
     "@types/node": "22.13.10",
     "@types/react": "19.0.10",
+    "daisyui": "^5.0.9",
     "tailwindcss": "^4",
     "typescript": "5.8.2"
   }
